# sdk

./: .gitignore  CLAUDE.md  CNAME  README.md  eslint.config.js  package-lock.json  package.json  sdk.d.ts  sdk.js
.claude/: settings.json
.claude/commands/: validate.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml
python/: README.md  pyproject.toml
python/mimigames_sdk/: __init__.py  protocol.py  types.py
python/tests/: test_models.py
scripts/: test_local.sh
tasks/: README.md  invariant-hygiene.md  server-router-factory.md  tick-contract-python.md  tick-contract-typescript.md
test/: sdk.test.js
